Page history link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <footer class="site-footer">
-
-
+	<div class="wrapper">
+		<a href="{{site.gitweb}}{{page.path}}">Page history</a>
+	</div>
 </footer>
