--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,20 @@
+body {
+	color: #333;
+}
+
+a {
+	color: #26f;
+	text-decoration: none;
+}
+
+a:visited {
+	color: #029;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
 code, pre {
 	background-color: #eee;
 }
