--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,12 @@
 
   <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
-	  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+	  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+	  TeX: {
+		  Macros: {
+			  t: ["\\text{#1}", 1]
+		  }
+	  }
 });
   </script>
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
