Fancier and more readable layout
Inspired by bettermotherfuckingwebsite.com

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,11 @@
 .site-nav {
 	float: right;
 }
+
+.page-content {
+	max-width: 650px;
+	margin: 40px auto;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 40px;
+}
+
