Do not load AJAX locally

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,5 +20,7 @@ MathJax.Hub.Config({
 	  }
 });
   </script>
+  {% if !site.show_drafts %}
   <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  {% endif %}
 </head>
