--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,10 @@ h1, h2, h3, h4 {
 	line-height: 1.2;
 }
 
+h1 {
+	border-bottom: 1px solid #333;
+}
+
 a {
 	color: #26f;
 	text-decoration: none;
@@ -27,6 +31,14 @@ code, pre {
 
 blockquote {
 	font-style: italic;
+}
+
+tr:nth-child(odd) {
+	background-color: #eee;
+}
+
+td {
+	padding: 0.2em;
 }
 
 .thumbnail img {
