CPU power draft

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,8 @@ MathJax = {
 	  tex: {
 		  inlineMath: [['$','$'], ['\\(','\\)']],
 		  macros: {
-			  t: ["\\text{#1}", 1]
+			  t: ["\\text{#1}", 1],
+			  d: ["\\text{d}", 0],
 		  }
 	  }
 };
